# nonebot-plugin-agent

./: .gitignore  README.md  main.py  pyproject.toml
nonebot-plugin-agent/: base.py  main.py
nonebot-plugin-agent/llm/: __init__.py  base.py  openai.py
nonebot_plugin_agent/: __init__.py  base.py  config.py
nonebot_plugin_agent/action/: __init__.py  base.py
nonebot_plugin_agent/llm/: __init__.py  openai.py
